# cs2-tickrate

./: CMakeLists.txt  CMakePresets.json  README.md  launch.vs.json
game/csgo/addons/cs2tickrate/gamedata/: cs2tickrate.games.jsonc
game/csgo/addons/metamod/: cs2tickrate.vdf
src/: cs2tickrate.cpp  cs2tickrate.h
src/core/: cvarmanager.h  gamedata.cpp  gamedata.h  interfaces.cpp  logger.cpp  memory.cpp  memory.h  patch.cpp  patch.h
src/sdk/: common.h  convars2.cpp  convars2.h  netmessages.h
src/utils/: utils.cpp  utils.h
